--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-jwt": "^8.4.1",
+    "firebase-admin": "^13.0.1",
     "http-errors": "~1.6.3",
     "mongoose": "^8.7.2",
     "morgan": "~1.9.1"
